# hanabi

./: .env-metadata.json  README.md  config.py  hanabi.py  hosted_rl.toml  player.py  prompt.py  pyproject.toml  rl.toml  sft.toml  synth.toml  utils.py
.prime/: .env-metadata.json
hanabi/: __init__.py  config.py  hanabi.py  player.py  prompt.py  utils.py
outputs/evals/hanabi--google--gemini-3-flash-preview/df5c19a8/: metadata.json  results.jsonl
outputs/evals/hanabi--gpt-4.1-mini/999d061b/: metadata.json  results.jsonl
outputs/evals/hanabi--gpt-4.1-mini/cc519790/: metadata.json  results.jsonl
outputs/evals/hanabi--openai--gpt-4.1-mini/b9a2e8b3/: metadata.json  results.jsonl
outputs/evals/hanabi--openai--gpt-4.1-mini/fad765cc/: metadata.json  results.jsonl
outputs/evals/hanabi--prime-intellect--intellect-3/8e092de8/: metadata.json  results.jsonl
outputs/evals/hanabi--x-ai--grok-4-fast/de2d00ea/: metadata.json  results.jsonl
